<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="155dp"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="98dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="298dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText1"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="378dp" />
        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="92dp"
            android:background="@drawable/round_bg"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:layout_below="@+id/editText2"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerHorizontal="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="483dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="606dp" />



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>