<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/orange"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_1"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/attendance" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="@string/Attend"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_2"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/calendar"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="@string/timetable"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_4"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_below="@id/card_view_1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/maths"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="GPA Calculator"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_5"
            android:layout_below="@id/card_view_2"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/enterprise"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="@string/company"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_6"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_below="@id/card_view_4"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login"/>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="@string/campus"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_7"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_below="@id/card_view_4"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/document"/>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="Resources"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_3"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_below="@id/card_view_7"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="PrivateResource">

            <ImageView
                android:id="@+id/imageview3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/logout"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:text="Sign Out"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>